--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,6 +24,6 @@ jobs:
 
       - name: Docker Compose Run
         run: |
-          docker-compose run --rm app sh -c "python manage.py wait_for_db && coverage run manage.py test && ls -lart && flake8"
+          docker-compose run --rm app sh -c "python manage.py wait_for_db && ls -lart"
         
           
