--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,15 +26,11 @@ jobs:
         run: |
           docker-compose run --rm app sh -c "python manage.py wait_for_db && coverage run manage.py test && coverage report && flake8 && ls -lart"
 
+      - name: Terraform Init
+        run: terraform -chdir=deploy init
+
       - name: Terraform Validate
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 0.12.13
-          tf_actions_subcommand: 'validate'
-          tf_actions_working_dir: 'deploy'
-          tf_actions_comment: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: terraform -chdir=deploy validate -no-color 
 
       - name: Build and Push Image
         run: |
