--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,10 +27,15 @@ jobs:
           docker-compose run --rm app sh -c "python manage.py wait_for_db && coverage run manage.py test && coverage report && flake8 && ls -lart"
 
       - name: Terraform Init
-        run: terraform -chdir=deploy init
+        run: terraform init
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TF_ACTION_WORKING_DIR: 'deploy'
+          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Terraform Validate
-        run: terraform -chdir=deploy validate -no-color 
+        run: echo "terraform -chdir=deploy validate -no-color"
 
       - name: Build and Push Image
         run: |
