--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,6 +26,13 @@ jobs:
         run: |
           docker-compose run --rm app sh -c "python manage.py wait_for_db && coverage run manage.py test && coverage report && flake8 && ls -lart"
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Check Directory
+        run: |
+          ls -lart
+
       - name: Terraform Init
         run: terraform init
         env:
