--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Docker Compose Run
         run: |
-          docker-compose run --rm app sh -c "python manage.py wait_for_db && coverage run manage.py test && coverage report && flake8 && ls -lart"
-
+          echo "docker-compose"
+          
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
@@ -37,7 +37,7 @@ jobs:
         run: terraform init
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TF_ACTION_WORKING_DIR: 'deploy'
+          TF_ACTION_WORKING_DIR: './deploy/'
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
