--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,7 +34,7 @@ jobs:
           ls -lart
 
       - name: Terraform Init
-        run: terraform -chdir=deploy init
+        run: terraform -chdir=deploy init -backend=false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_ACTION_WORKING_DIR: '.'
@@ -42,7 +42,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Terraform Validate
-        run: echo "terraform -chdir=deploy validate -no-color"
+        run: terraform -chdir=deploy validate -no-color
 
       - name: Build and Push Image
         run: |
