--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,6 +14,10 @@ on:
       - 'main'
       - 'releases/**'
 
+env:
+  ECR_REPO: 145319473435.dkr.ecr.us-east-1.amazonaws.com/recipe-app-api-devops
+
+
 jobs:
   test_and_lint:
     name: Unit Testing and Linting
@@ -33,7 +37,7 @@ jobs:
         run: |
           ls -lart
 
-      - name: Terraform Init
+      - name: Terraform Validate
         run: |
           cd deploy/
           terraform init -backend=false
@@ -44,21 +48,13 @@ jobs:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Terraform Validate
-        run: echo "terraform -chdir=deploy validate -no-color"
-
-      - name: Build and Push Image
+  build_and_push_image:
+    name: Build Docker Image and Push to Registry
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build and Push Docker Image
         run: |
-          echo "Build and Push Image "
-
-      - name: Terraform Init
-        run: |
-          echo "Terraform Init"
-
-      - name: Terraform Plan
-        run: |
-          echo "Terraform Plan"
-
-      - name: Terraform Apply
-        run: |
-          echo "Terraform Apply"
+          apt install python3
+          python --version
+          pip3 install awscli
+          env
