--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,4 +62,4 @@ jobs:
           env
           git_hash=$(git rev-parse --short "$GITHUB_SHA")
           echo $git_hash
-          docker build --compress -t $ECR_REPO:$git_hash
+          docker build . --compress -t $ECR_REPO:$git_hash
