--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -63,3 +63,7 @@ jobs:
           git_hash=$(git rev-parse --short "$GITHUB_SHA")
           echo $git_hash
           docker build . --compress -t $ECR_REPO:$git_hash
+          $(aws ecr get-login --no-include-email --region us-east-1)
+          docker push $ECR_REPO:$git_hash
+          docker tag $ECR_REPO:$git_hash $ECR_REPO:latest
+          docker push $ECR_REPO:latest
