--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,13 +6,11 @@ on:
       - 'development'
       - 'master'
       - 'main'
-      - 'releases/**'
   pull_request:
     branches:
       - 'development'
       - 'master'
       - 'main'
-      - 'releases/**'
 
 env:
   ECR_REPO: 145319473435.dkr.ecr.us-east-1.amazonaws.com/recipe-app-api-devops
@@ -63,7 +61,7 @@ jobs:
           git_hash=$(git rev-parse --short "$GITHUB_SHA")
           echo $git_hash
           echo ${{github.ref}}
-          echo ${{github.ref.name}}
+          echo ${{github.ref_name}}
           docker build . --compress -t $ECR_REPO:$git_hash
           $(aws ecr get-login --no-include-email --region us-east-1)
           docker push $ECR_REPO:$git_hash
