--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,7 +49,7 @@ jobs:
   build_and_push_image:
     name: Build Docker Image and Push to Registry
     runs-on: ubuntu-latest
-    if : '$GITHUB_REF_NAME =~ /^(main|master|production)$/'
+    if : github.ref_name == 'master' || github.ref_name == 'main' || github.ref_name == 'production'
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -91,6 +91,7 @@ jobs:
           terraform init
           terraform workspace select staging || terraform workspace new staging
           terraform plan
+
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
