--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,6 +49,7 @@ jobs:
   build_and_push_image:
     name: Build Docker Image and Push to Registry
     runs-on: ubuntu-latest
+    needs: test_and_lint
     if : github.ref_name == 'master' || github.ref_name == 'main' || github.ref_name == 'production'
     steps:
       - name: Checkout Repo
@@ -75,6 +76,7 @@ jobs:
   setup_staging_infra:
     name: Setup Staging Environment in AWS using Terraform
     runs-on: ubuntu-latest
+    needs: build_and_push_image
     if : github.ref_name == 'master' || github.ref_name == 'main' || github.ref_name == 'production'
     steps:
       - name: Checkout Repo
