--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -85,14 +85,14 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
-      - name: Terraform Validate
+      - name: Terraform Plan
         run: |
           cd deploy/
           git_hash=$(git rev-parse --short "$GITHUB_SHA")
           export TF_VAR_ecr_image_api=$ECR_REPO:$git_hash
           terraform init
           terraform workspace select staging || terraform workspace new staging
-          terraform validate
+          terraform plan
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
