--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -91,7 +91,8 @@ jobs:
           git_hash=$(git rev-parse --short "$GITHUB_SHA")
           export TF_VAR_ecr_image_api=$ECR_REPO:$git_hash
           terraform init
-          terraform workspace select staging || terraform workspace new staging
+          terraform workspace new staging || true
+          terraform workspace select staging
           terraform plan
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
