--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -93,7 +93,7 @@ jobs:
           terraform init
           terraform workspace new staging || true
           terraform workspace select staging
-          terraform plan
+          terraform workspace list
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
