--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -94,6 +94,7 @@ jobs:
           terraform workspace new staging || true
           terraform workspace select staging
           terraform workspace list
+          terraform plan
         env:
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
