--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -96,5 +96,7 @@ jobs:
           terraform workspace list
           terraform plan
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TF_ACTION_WORKING_DIR: '.'        
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
