--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,6 +30,8 @@ jobs:
           
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 0.12.21
 
       - name: Check Directory
         run: |
@@ -84,6 +86,8 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 0.12.21
 
       - name: Terraform Plan
         run: |
