--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -104,3 +104,6 @@ jobs:
           TF_ACTION_WORKING_DIR: '.'        
           AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_db_password: ${{ TF_VAR_DB_PASSWORD }}
+          TF_VAR_db_username: ${{ TF_VAR_DB_USERNAME }}
+          TF_VAR_django_secret_key: ${{ TF_VAR_DJANGO_SECRET_KEY }}
